# BV_SnakeGame

./: CMakeLists.txt  README.md
_Finales_Projekt/code/: CMakeLists.txt
_Finales_Projekt/code/src/: panel_composer.hpp
bv/: CMakeLists.txt
bv/src/: blob_detection.hpp  line_detection.hpp  main.cpp  panel_composer.hpp
cg/: CMakeLists.txt
cg prep/include/: Box.h  Cone.h  GameRenderer.h  Grid.h  LightSource.h  Model.h  Roof.h  Sphere.h
cg prep/resources/: BlinnPhongPoint.frag  BlinnPhongPoint.vert  BlinnPhongPointTex.frag  BlinnPhongPointTex.vert  O2_Basic.vert
cg prep/src/: Box.cpp  Cone.cpp  GameRenderer.cpp  LightSource.cpp  Material.cpp  ShaderProgram.cpp  Sphere.cpp
cg/include/: Box.h  BoxTex.h  GameMainWindow.h  GameRenderer.h  Material.h  Mesh.h  Pyramid.h  ShaderProgram.h  Sphere2.h  newPyramid.h
cg/resources/: O0_Basic.vert  O1_Basic.frag  O3_Basic.frag
cg/resources/apple/.mayaSwatches/: apple_tex.jpg_hcm.swatch
cg/resources/banana/.mayaSwatches/: texturefabrik-com_bananas_01.jpg_hcm.swatch
cg/src/: Box.cpp  BoxTex.cpp  GameMainWindow.cpp  GameRenderer.cpp  Grid.cpp  Mesh.cpp  Model.cpp  Pyramid.cpp  Roof.cpp  Sphere2.cpp  newPyramid.cpp
code/: blobdetectorparams1.xml
code/src/: blob_detection.hpp  square_detection.hpp
fehlgeschlagener_Versuch/bv/: CMakeLists.txt
fehlgeschlagener_Versuch/bv/src/: blob_detection.hpp  line_detection.hpp  main.cpp  panel_composer.hpp
include/: BoxLightTexMainWindow.h  BoxLightTexRenderer.h  BoxTex.h  InteractionHandler.h  LightSource.h  Material.h  Sphere.h
resources/: BlinnPhongPoint.frag  BlinnPhongPoint.vert  BlinnPhongPointTex.vert
src/: BoxLightTexMainWindow.cpp  BoxLightTexRenderer.cpp  InteractionHandler.cpp  LightSource.cpp  Material.cpp  Sphere.cpp  main.cpp
videos/: ColoredBlobs2.wm
